# ecommerce-data-ingestion-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.pycache_tmp/Users/jacin/AppData/Local/Python/pythoncore-3.14-64/Lib/: __future__.cpython-314.pyc.2211882722064  _colorize.cpython-314.pyc.2211882715296  _opcode_metadata.cpython-314.pyc.2211886838912  _py_warnings.cpython-314.pyc.2211882717024  _weakrefset.cpython-314.pyc.2211882724512  annotationlib.cpython-314.pyc.2211886841072  argparse.cpython-314.pyc.2211882718176  ast.cpython-314.pyc.2211886848096  bz2.cpython-314.pyc.2211886854000  codeop.cpython-314.pyc.2211882722064  contextlib.cpython-314.pyc.2211886826240  copy.cpython-314.pyc.2211886855296  copyreg.cpython-314.pyc.2211882720048  dataclasses.cpython-314.pyc.2211882721776  dis.cpython-314.pyc.2211886848384  enum.cpython-314.pyc.2211874584688  fnmatch.cpython-314.pyc.2211886849536  functools.cpython-314.pyc.2211886854000  gettext.cpython-314.pyc.2211892131952  inspect.cpython-314.pyc.2211882714000  keyword.cpython-314.pyc.2211886856448  linecache.cpython-314.pyc.2211886845792  locale.cpython-314.pyc.2211892121296  lzma.cpython-314.pyc.2211886845936  opcode.cpython-314.pyc.2211886840496  operator.cpython-314.pyc.2211886856304  py_compile.cpython-314.pyc.2211874586416  reprlib.cpython-314.pyc.2211886851408  shutil.cpython-314.pyc.2211892121584  textwrap.cpython-314.pyc.2211886845792  token.cpython-314.pyc.2211882713424  tokenize.cpython-314.pyc.2211882713280  traceback.cpython-314.pyc.2211882728976  types.cpython-314.pyc.2211874584976  warnings.cpython-314.pyc.2211882716160  weakref.cpython-314.pyc.2211886847664
.pycache_tmp/Users/jacin/AppData/Local/Python/pythoncore-3.14-64/Lib/collections/: __init__.cpython-314.pyc.2211886714352
.pycache_tmp/Users/jacin/AppData/Local/Python/pythoncore-3.14-64/Lib/compression/: __init__.cpython-314.pyc.2211892487280
.pycache_tmp/Users/jacin/AppData/Local/Python/pythoncore-3.14-64/Lib/encodings/: __init__.cpython-314.pyc.2211874573168  _win_cp_codecs.cpython-314.pyc.2211874616816  aliases.cpython-314.pyc.2211874578064  cp1252.cpython-314.pyc.2211874578496  utf_8.cpython-314.pyc.2211874580800
.pycache_tmp/Users/jacin/AppData/Local/Python/pythoncore-3.14-64/Lib/importlib/: __init__.cpython-314.pyc.2211874580080  _abc.cpython-314.pyc.2211874583968
.pycache_tmp/Users/jacin/AppData/Local/Python/pythoncore-3.14-64/Lib/re/: __init__.cpython-314.pyc.2211886845792  _casefix.cpython-314.pyc.2211886852560  (+3 more)
.pycache_tmp/projects/scraper-engine/src/scraper_engine/app/: main.cpython-314.pyc.2211892185776
dashboard/: clean.ipynb
notebooks/dashboard_validation/: 00_gold_game_catalog.ipynb  01_gold_platform_performance.ipynb  02_gold_genre_performance.ipynb  03_gold_price_distribution.ipynb  04_gold_scrapper_run_quality.ipynb
notebooks/exploration/: 00_silver_clean_tables.ipynb
notebooks/gold/: 00_gold_game_catalog.ipynb  01_gold_platform_performance.ipynb  01gold_platform_performance.ipynb  02_gold_genre_performance.ipynb  03_gold_price_distribution.ipynb
notebooks/silver/: 00_silver_clean_tables.ipynb  clean.ipynb  silver.ipynb
src/app/: main.py  run_catalog.py
src/application/: run_catalog.py
src/browser/: playwright_factory.py
src/config/: constants.py  settings.py
src/db/: init_db.py  repositories.py  sqlite.py
src/domain/: models.py
src/ecommerce_ingestion/app/: main.py  run_catalog.py  run_gold.py  run_silver.py
src/ecommerce_ingestion/browser/: playwright_factory.py
src/ecommerce_ingestion/config/: constants.py  gold_aggregations.py  gold_config.py  logging_config.py  mappers.py  paths.py  settings.py  silver_config.py  source_config.py
src/ecommerce_ingestion/db/: init_db.py  repositories.py  schema.sql  sql_clauses.py  sqlite.py
src/ecommerce_ingestion/domain/: enums.py  models.py
src/ecommerce_ingestion/processing/gold/: build_genre_extension_table.py  build_gold_game_catalog.py  build_gold_genre_performance copy.py  build_gold_platform_performance.py  build_gold_price_distribution.py  build_gold_scrapper_run_quality.py
src/ecommerce_ingestion/processing/silver/: build_silver_direct_database.py  build_silver_products.py
src/ecommerce_ingestion/sources/oxylabs/: discovery.py  parsers.py  scraper.py
src/ecommerce_ingestion/utils/: bucket_service.py  genre_unifier_service.py  parquet_file_service.py
src/ecommerce_ingestion/validation/: data_frame_validations.py  silver_validations.py  validation_runner.py
src/scraper_engine/app/: init_db.py  main.py
src/scraper_engine/application/: run_catalog.py
src/scraper_engine/core/: constants.py  settings.py
src/scraper_engine/domain/: enums.py  models.py
src/scraper_engine/infra/browser/: playwright_factory.py
src/scraper_engine/infra/db/: repositories.py  schema.sql  sqlite.py
src/scraper_engine/scraper/sources/oxylabs/: discovery.py  parsers.py  scraper.py  selectors.py
src/sources/oxylabs/: discovery.py  parsers.py  scraper.py
tests/unit/: test_oxylabs_parsers.py  test_snapshot_repository.py
(+4 files in other folders)
