[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-ingestion"
version = "0.1.0"
description = "Modular multi-source scraping engine using Playwright"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jacinto Arjona Garrido" }
]
dependencies = [
    "playwright==1.43.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "isort==5.13.2",
    "mypy==1.10.0",
    "pytest==8.2.0",
    "ruff==0.4.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "TID"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"src".msg = "Importa desde 'ecommerce_ingestion', no desde 'src'."

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
